--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta charset="UTF-8">
-      <link rel="stylesheet" href="./style.css">
+      <link rel="stylesheet" href="../public/style.css">
       <title>Document</title>
   </head>
   <body>
