--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <link rel="stylesheet" href="../public/style.css">
-      <title>Document</title>
+      <title>Atsushi ~ Electron</title>
   </head>
   <body>
     <div id="app">
